--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
 </head>
 
 <body id="app-field">
-
+   
     <div class="menu">
         <div class="time">
-            <h2>24 FEB 2018</h2>
+            <h2 id="date">24 FEB 2018</h2>
         </div>
         <div class="header">
             <h1>Save your thoughts</h1>
         </div>
         <div class="sort">
             <h2>Show Category</h2>
-            <select name="sort" id="sort">
-                <option value="All" selected>All</option>
+            <select id="search">
+                <option value="all" selected>All</option>
                 <option value="general">General</option>
                 <option value="private">Private</option>
                 <option value="work">Work</option>
@@ -53,6 +53,7 @@
             </div>
         </div>
     </section>
+    
     <section class="note-section"></section>
 
     <section id="edit" class="edit-section hide">
