--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    
     <div class="menu">
         <div class="time">
-            <h2 id="date">24 FEB 2018</h2>
+            <h2 id="date"></h2>
         </div>
         <div class="header">
             <h1>Save your thoughts</h1>
