--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Simple Note App</title>
 
     <!--    Open Sans Font -->
@@ -16,11 +17,13 @@
     <link rel="stylesheet" href="css/reset.css">
     <!--    Main Style Sheet -->
     <link rel="stylesheet" href="css/style.css">
+        <!--    Responsive Style Sheet -->
+    <link rel="stylesheet" href="css/responsive.css">
 
 </head>
 
 <body id="app-field">
-   
+
     <div class="menu">
         <div class="time">
             <h2 id="date"></h2>
@@ -53,7 +56,7 @@
             </div>
         </div>
     </section>
-    
+
     <section class="note-section"></section>
 
     <section id="edit" class="edit-section hide">
